# protobuf-c-rpc

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README.md  TODO  configure.ac
example/dirlookup/: example-client.c  example-server.c
example/sctp-rpc/: example-word-funcs-service.h  protobuf-c-sctp.h
example/simplerpc/: simplerpc.c  simplerpc.h
protobuf-c-rpc/: protobuf-c-data-buffer.h  protobuf-c-dispatch.h  protobuf-c-rpc-client.c  protobuf-c-rpc-data-buffer.c  protobuf-c-rpc-data-buffer.h  protobuf-c-rpc-dispatch.c  protobuf-c-rpc-dispatch.h  protobuf-c-rpc-server.c  protobuf-c-rpc.c  protobuf-c-rpc.h
t/: test-rpc.c
